tests/should_fail/inexhaustive_match.stderr
error[E0004]: non-exhaustive patterns: `Option::Some(_)` not covered
  --> inexhaustive_match.rs:10:11
   |
10 |     match x {
   |           ^ pattern `Option::Some(_)` not covered
   |
note: `Option<()>` defined here
  --> inexhaustive_match.rs:3:6
   |
 3 | enum Option<T> {
   |      ^^^^^^
 4 |     Some(T),
   |     ---- not covered
   = note: the matched value is of type `Option<()>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
11 ~         None => (),
12 ~         Option::Some(_) => todo!(),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
